--- a/android-ui/src/main/res/layout/item.xml
+++ b/android-ui/src/main/res/layout/item.xml
@@ -7,19 +7,24 @@
 
     <com.pppp.flickrimagegallery.features.main.view.customview.SquareImageView
         android:id="@+id/image"
-        android:transitionName="@string/image_transition"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:transitionName="@string/image_transition" />
+
+    <ProgressBar
+        android:layout_width="@dimen/small_progress_size"
+        android:layout_height="@dimen/small_progress_size"
+        android:layout_centerInParent="true" />
 
     <TextView
-        android:gravity="center"
         android:id="@+id/item_title"
         style="@style/FlickrStyle"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center" />
 
 </com.pppp.flickrimagegallery.features.main.view.customview.SquareLayout>
