--- a/android-ui/src/main/res/values/colors.xml
+++ b/android-ui/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#99000000</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FFFF00</color>
+    <color name="colorAccent">#FF6600</color>
 </resources>
