Add shared element transition

--- a/android-ui/src/main/res/layout/main.xml
+++ b/android-ui/src/main/res/layout/main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.pppp.flickrimagegallery.features.main.view.customview.FlickrRecyclerView
-        android:id="@+id/recyler"
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
